A fix (bug #5115: Erronious Syntax Error when comment placed inside of "create table")